# innexar-Saas

./: .gitignore  README-DEV.md  README.md  build-tenant-image.bat  build-tenant-image.sh  docker-compose.yml  erpbase_config.json  setup_erpbase.ps1  setup_saas_module.ps1  start-dev.ps1  start-innexar.ps1
apps/saas_management/: __init__.py  boot.py  hooks.py  install.py  saas_plan.py  saas_tenant.py  uninstall.py
config/: custom_setup.py  mariadb.cnf
docker/backend/: Dockerfile  Dockerfile.simple  (+3 more)
docs/: 00-indice.md  01-resumo-executivo.md  02-arquitetura-tecnica.md  03-planos-e-modulos.md  04-fluxo-provisionamento.md  05-plano-fases.md  06-recomendacoes-tecnicas.md  visao_geral.md
erpnext/: __init__.py
innexar-core/: README.md  pyproject.toml
innexar-core/innexar_core/: __init__.py  hooks.py  modules.txt  patches.txt
innexar-core/innexar_core/config/: desktop.py
innexar-core/innexar_core/patches/: add_default_saas_plans.py
innexar-core/innexar_core/saas_management/: README.md  __init__.py  boot.py  config.json  hooks.py  permission.py  saas_plan.py  saas_tenant.py
innexar-core/innexar_core/saas_management/config/: docs.py  site_config.py
innexar-core/innexar_core/saas_management/doctype/saas_plan/: saas_plan.json
innexar-core/innexar_core/saas_management/doctype/saas_tenant/: saas_tenant.js  saas_tenant.json  saas_tenant.py
innexar-core/innexar_core/saas_management/utils/: bench_exec.py  locale.py  site_post_setup.py
innexar-core/innexar_core/saas_management/workspace/innexar_saas/: innexar_saas.json
scripts/: create_tenant.py  setup-dev.ps1
(+16 files in other folders)
